--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ main {
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #888;
+  border-radius: 10px;
 }
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
